...
                            <tableViewSection id="5Z1-ZI-qIb">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Static Prepare Call" id="aLs-AZ-eR3">
                                        <rect key="frame" x="0.0" y="60" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Instance Prepare Call" id="iwj-oD-Yu1">
                                        <rect key="frame" x="0.0" y="104" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inherited from SegueingInfoVC" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BZc-V1-N4h">
                                                    <rect key="frame" x="8" y="8" width="584" height="27.5"/>
                                                    <animations/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Destination is Nav" id="qp0-Gh-aIk">
                                        <rect key="frame" x="0.0" y="192" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Destination is Tab" id="0vO-Ta-RXJ">
                                        <rect key="frame" x="0.0" y="236" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Pop" id="oru-Yr-U1b">
                                        <rect key="frame" x="0.0" y="280" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Pop To" id="OFq-NF-70j">
                                        <rect key="frame" x="0.0" y="324" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                        </connections>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Pop To Root" id="YTc-eF-gQH">
                                        <rect key="frame" x="0.0" y="368" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
