...
                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="reS-RA-0QM">
                                        <rect key="frame" x="0.0" y="41" width="300" height="30"/>
                                        <animations/>
                                        <state key="normal" title="Add Text and Send"/>
                                        <connections>
                                            <action selector="pass:" destination="yLj-Qb-xhA" eventType="touchUpInside" id="D9h-n9-RJl"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <animations/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="41"/>
                                                <animations/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pass along..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="okq-iZ-9la">
                                                <rect key="frame" x="0.0" y="46" width="300" height="30"/>
                                                <animations/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="csF-CI-3CS">
...
                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D1k-lQ-Hjd">
                                        <rect key="frame" x="0.0" y="41" width="300" height="30"/>
                                        <animations/>
                                        <state key="normal" title="Add Text and Pop"/>
                                        <connections>
                                            <action selector="popToRootViewController:" destination="9yO-Ho-ql3" eventType="touchUpInside" id="lr4-V9-dKC"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <animations/>
...
