...
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h4G-1n-Ni4">
                                        <rect key="frame" x="0.0" y="76" width="300" height="30"/>
                                        <animations/>
                                        <state key="normal" title="Send"/>
                                        <connections>
                                            <action selector="pass:" destination="Tz7-7z-da0" eventType="touchUpInside" id="Ito-jc-mSp"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <animations/>
...
